add exports